loaderRunLoop() should use synchronization instead of while loop https://bugs.webkit.org/show_bug.cgi?id=55402

Patch by Jae Hyun Park <jae.park@company100.net> on 2012-10-24
Reviewed by Alexey Proskuryakov.

Originally, loaderRunLoop() sleeps until a thread has started and set
the loaderRunLoopObject static variable. This patch uses
ThreadCondition to synchronize instead of a while loop.

No new tests (No behavior change).

* platform/network/cf/LoaderRunLoopCF.cpp:
(WebCore::runLoaderThread):
(WebCore::loaderRunLoop):
* platform/network/cf/LoaderRunLoopCF.h:
(WebCore):

Canonical link: https://commits.webkit.org/118327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132412 268f45cc-cd09-0410-ab3c-d52691b4dbfc